# onmark

./: .editorconfig  .gitignore  .oxlintrc.json  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml  desktop-release.yml
conformance/: README.md  layered-media-admission.md
conformance/binding/invalid/: root-errors.diagnostics.txt  root-errors.html  root-errors.onmark  structural-errors.diagnostics.txt  structural-errors.html  structural-errors.onmark
conformance/binding/valid/: gate-one.linked.txt  gate-one.onmark  general-audio.html  general-audio.linked.txt  native-html.html  native-html.linked.txt
conformance/browser/: environment.d.ts  gate-one.html  layered-presentation.css  layered-presentation.html  layered-presentation.ts  semantic-presentation.css  semantic-presentation.motion.ts  temporal-experiment.css  temporal-experiment.html  temporal-experiment.ts  tsconfig.json  video-presentation.css  video-presentation.html  video-presentation.ts
conformance/cli/: gate-four.html  gate-four.onmark  gate-one.html  gate-one.onmark  gate-two.html  gate-two.onmark
conformance/protocol/: browser-requests-v1.jsonl  browser-responses-v1.jsonl  bundle-manifest-v1.json
conformance/protocol/bundle-v1/: index.html  manifest.json  presentation.css  presentation.js
conformance/protocol/bundle-v2/: manifest.json  presentation.css  presentation.js
conformance/protocol/bundle-v3/: manifest.json  presentation.js
conformance/render-graph/valid/: two-independent-shots.html  two-independent-shots.onmark  two-independent-shots.plan.txt
conformance/resolution/invalid/: attribute-errors.diagnostics.txt  attribute-errors.html  attribute-errors.onmark  audio-errors.diagnostics.txt  audio-errors.html  audio-errors.onmark  (+3 more)
crates/cli/: Cargo.toml
crates/cli/src/: arguments.rs  assets.rs  browser_install.rs  bundler.rs  compilation.rs  diagnostic.rs  environment.rs  execution.rs  failure.rs  input.rs  main.rs  render.rs  subtitle.rs  worker.rs
crates/cli/tests/: command.rs  render.rs  worker.rs
crates/cli/tests/fixtures/: ffprobe-video-only
crates/core/: Cargo.toml
crates/core/src/: lib.rs  render_graph.rs  timeline.rs
crates/core/src/compiler/: audio.rs  bind.rs  captions.rs  diagnostic.rs  linked.rs  linked_film.rs  mod.rs  parse.rs  resolve.rs  resolved_film.rs  solve.rs
crates/core/src/diagnostics/: code.rs  mod.rs  report.rs
crates/core/src/model/: asset.rs  audio.rs  caption.rs  duration.rs  element.rs  id.rs  mod.rs  reference.rs  source.rs  temporal.rs  time.rs  visual.rs
crates/core/src/protocol/: bundle.rs  frame.rs  message.rs  mod.rs  plan.rs
crates/core/src/protocol/plan/: projection.rs
crates/core/src/syntax/: builder.rs  error.rs  mod.rs  parser.rs  reference.rs  tree.rs
crates/core/src/timeline/: mod.rs
crates/core/tests/: binding_conformance.rs  module_dependencies.rs  protocol_conformance.rs  render_graph_conformance.rs  resolution_conformance.rs  syntax_conformance.rs  timeline_conformance.rs
crates/core/tests/conformance/: mod.rs
crates/media/: Cargo.toml
crates/media/src/: error.rs  lib.rs  probe.rs  process.rs  response.rs  subtitle.rs
crates/media/src/subtitle/: ass.rs  subrip.rs  webvtt.rs
crates/media/tests/: probe.rs  subtitle_conformance.rs
crates/media/tests/fixtures/: ffprobe
crates/render/: Cargo.toml
crates/render/src/: environment.rs  lib.rs  profile.rs  unit.rs  video.rs  visual.rs  worker.rs
crates/render/src/browser/: compositor.rs  error.rs  frame.rs  limits.rs  mod.rs  process.rs  resource.rs  session.rs
crates/render/src/encoder/: audio.rs  error.rs  layered.rs  layered_process.rs  limits.rs  mod.rs  process.rs  session.rs
crates/render/src/executor/: capture.rs  error.rs  frame_capture.rs  mod.rs  output.rs
crates/render/src/frame_artifact/: format.rs  mod.rs  reader.rs  writer.rs
crates/render/src/unit_root/: error.rs  materializer.rs  mod.rs
crates/render/tests/: chromium.rs  media_seek.rs  render.rs  unit_root.rs
crates/render/tests/fixtures/: decoded-video.html  ffmpeg  injected-video.html  missing-runtime.html  moving-overlay.js  stalled-runtime.html  transparent-empty.html  transparent-overlay.html
crates/render/tests/media_seek/: admission.rs  decoder.rs  layered.rs  measurement.rs  pixels.rs
crates/render/tests/media_seek/admission/: color.rs  correctness.rs  performance.rs
deploy/aws-lambda/: Cargo.toml  README.md
deploy/aws-lambda/src/: browser.rs  config.rs  deadline.rs  download.rs  error.rs  handler.rs  invocation.rs  lib.rs  main.rs  package_main.rs  publication.rs  storage.rs
deploy/aws-lambda/src/packaging/: archive.rs  error.rs  manifest.rs  mod.rs
deploy/aws-lambda/tests/: remote_partition.rs
deploy/aws-lambda/tests/remote_partition/: aws.rs  fixture.rs  media.rs
docs/: README.md
docs/en/: architecture.md  language-specification.md  presentation-contract.md  rust-style-guide.md  typescript-style-guide.md
docs/zh-CN/: architecture.md  language-specification.md  presentation-contract.md  rust-style-guide.md  typescript-style-guide.md
evals/audio-syntax/: README.md  baseline.json  cases.json  output-schema.json  settings.json
evals/html-authoring/: README.md  baseline.json  cases.json  output-schema.json  settings.json
schemas/: aws-capture-invocation-v1.schema.json  aws-capture-result-v1.schema.json  browser-request-v1.schema.json  browser-response-v1.schema.json  bundle-manifest-v1.schema.json  bundle-manifest-v2.schema.json  bundle-manifest-v3.schema.json
scripts/: Cargo.toml  audio_eval.rs  check-typescript-style.mjs  clean-typescript-output.mjs  html_eval.rs  protocol-codegen.mjs  xtask.rs
scripts/release/: admit.mjs  artifact.rs  assemble-package.mjs  build-media.sh  error.rs  fetch-media.mjs  media-sources.json  media.rs  mod.rs  observed-cleanup.mjs  observed-cleanup.test.mjs  sidecar.rs  target.rs
xtask/: Cargo.toml  protocol-codegen.mjs
xtask/src/: main.rs
(+94 files in other folders)
