[package]
name = "onmark-xtask"
description = "Deterministic schema generation for Onmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "onmark-xtask"
path = "xtask.rs"

[dependencies]
onmark-aws-lambda = { path = "../deploy/aws-lambda", default-features = false, features = ["schema"] }
onmark-core = { path = "../crates/core", features = ["schema"] }
schemars = "1.2.0"
serde_json = "1.0"

[lints]
workspace = true
