[package]
name = "onmark-xtask"
description = "Deterministic repository generation tasks for Onmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
onmark-core = { path = "../crates/core", features = ["schema"] }
schemars = "1.2.0"
serde_json = "1.0"

[lints]
workspace = true
