[package]
name = "onmark-cli"
description = "Native command-line composition root for Onmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "onmark"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive", "env"] }
onmark-core = { path = "../core" }
onmark-media = { path = "../media" }
onmark-render = { path = "../render" }
serde_json = "1.0"
sha2 = "0.11.0"
tempfile = "3.27"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
