[package]
name = "onmark-aws-lambda"
description = "AWS Lambda deployment adapter for immutable Onmark frame artifacts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[features]
default = ["runtime"]
runtime = [
    "dep:aws-config",
    "dep:aws-sdk-s3",
    "dep:lambda_runtime",
    "dep:onmark-core",
    "dep:tempfile",
    "dep:tokio",
]
schema = ["dep:schemars", "onmark-render/schema"]

[[bin]]
name = "onmark-aws-lambda"
path = "src/main.rs"
required-features = ["runtime"]

[dependencies]
aws-config = { version = "1.9.0", optional = true }
aws-sdk-s3 = { version = "1.138.0", optional = true }
lambda_runtime = { version = "1.3.0", default-features = false, optional = true }
onmark-core = { path = "../../crates/core", optional = true }
onmark-render = { path = "../../crates/render" }
schemars = { version = "1.2.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = { version = "3.27", optional = true }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "time"], optional = true }

[lints]
workspace = true
