[package]
name = "onmark-aws-lambda"
description = "AWS Lambda deployment adapter for immutable Onmark frame artifacts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[features]
default = ["runtime"]
runtime = [
    "dep:aws-config",
    "dep:aws-sdk-s3",
    "dep:lambda_runtime",
    "dep:onmark-core",
    "dep:onmark-render",
    "dep:sha2",
    "dep:tar",
    "dep:tempfile",
    "dep:tokio",
    "dep:zstd",
]
schema = ["dep:onmark-render", "dep:schemars", "onmark-render/schema"]
package = ["dep:sha2", "dep:tar", "dep:tempfile", "dep:zip", "dep:zstd"]

[[bin]]
name = "onmark-aws-lambda"
path = "src/main.rs"
required-features = ["runtime"]

[[bin]]
name = "onmark-aws-lambda-package"
path = "src/package_main.rs"
required-features = ["package"]

[dependencies]
aws-config = { version = "1.9.0", optional = true }
aws-sdk-s3 = { version = "1.138.0", optional = true }
lambda_runtime = { version = "1.3.0", default-features = false, features = ["tracing"], optional = true }
onmark-core = { path = "../../crates/core", optional = true }
onmark-render = { path = "../../crates/render", optional = true }
schemars = { version = "1.2.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.11.0", optional = true }
tar = { version = "0.4.46", optional = true }
tempfile = { version = "3.27", optional = true }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"], optional = true }
zstd = { version = "0.13.3", optional = true }
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"], optional = true }

[dev-dependencies]
onmark-media = { path = "../../crates/media" }

[lints]
workspace = true
